tests/negative/neg_try_receive_target_not_null.safe
-- Test: neg_try_receive_target_not_null
-- Description: Access-typed channel elements are rejected before try_receive ownership checks run.
-- Expected: REJECT source_frontend_error

package neg_try_receive_target_not_null

   type payload is record
      value : integer;

   type payload_ptr is access payload;

   channel data_ch : payload_ptr capacity 1;

   function run
      target  : payload_ptr = new ((value = 2) as payload);
      success : boolean = false;

      try_receive data_ch, target, success;

